--- a/config.ini
+++ b/config.ini
@@ -12,3 +12,10 @@ subject = 接口自动化测试报告
 app = Outlook
 addressee = 807306906@qq.com
 cc = 1111111@qq.com
+
+
+;smtp_server = smtp.qq.com
+;Port = 465
+;Sender = 807306906@qq.com
+;psw = zhang@888
+;Receiver = 904199561@qq.com   （注：请写你的邮件收件人邮箱）
