重构测试报告

--- a/config.ini
+++ b/config.ini
@@ -5,17 +5,19 @@ baseurl = 127.0.0.1
 port = 8888
 timeout = 10.0
 
+[HTTPS]
+scheme = http
+baseurl = api_dev.duobeiyun.com
+path = /p/v1/project/create
+port = 8888
+timeout = 10.0
+
 
 [EMAIL]
 on_off = on
-subject = 接口自动化测试报告
-app = Outlook
-addressee = 807306906@qq.com
-cc = 1111111@qq.com
-
-
-;smtp_server = smtp.qq.com
-;Port = 465
-;Sender = 807306906@qq.com
-;psw = zhang@888
-;Receiver = 904199561@qq.com   （注：请写你的邮件收件人邮箱）
+smtp_server = smtp.163.com
+Port = 465
+Sender = 13501331103@163.com
+pwd = zhang511520
+Receiver = [807306906@qq.com]
+title = 接口自动化测试报告
