--- a/config.ini
+++ b/config.ini
@@ -8,7 +8,7 @@ timeout = 10.0
 [HTTPS]
 scheme = http
 baseurl = api_dev.duobeiyun.com
-path = /p/v1/project/create
+path = /p/v1/project
 port = 8888
 timeout = 10.0
 
